--- a/icon/src/app/login/login.component.html
+++ b/icon/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 					<form [formGroup]="registration" >
                         
 			
-						<mat-form-field  appearance="outline">
+						<mat-form-field  appearance="fill">
                             <mat-label>Username</mat-label>
 							<input matInput placeholder="Enter the email-id "  formControlName="email">
 						</mat-form-field><br/>
