--- a/icon/src/app/login/login.component.html
+++ b/icon/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 					<form [formGroup]="registration" >
                         
 			
-						<mat-form-field  appearance="fill">
+						<mat-form-field  appearance="outline">
                             <mat-label>Username</mat-label>
 							<input matInput placeholder="Enter the email-id "  formControlName="email">
 						</mat-form-field><br/>
@@ -25,7 +25,7 @@
 							<input matInput type="password" placeholder="Enter the Password" formControlName="password">
 						</mat-form-field>
 						<div class="button">
-							<button  mat-raised-button  color="warn" style="width:17em; background-color: rgb(60, 142, 91);" (click)="getlogin()">submit</button>
+							<button  mat-raised-button  color="warn" style="width:17em; background-color: rgb(60, 142, 91);" (click)="login()">submit</button>
 				
 						</div>
 					</form>
