added delete button

--- a/icon/src/app/asset-detail/asset-detail.component.html
+++ b/icon/src/app/asset-detail/asset-detail.component.html
@@ -1,13 +1,14 @@
 <app-navbar></app-navbar>
 
-<div class="whitePanel">
-  <span class="example-spacer"></span>
-  <mat-icon>more_vert</mat-icon>
 
-  <div></div>
+
+<div style="display: flex;     justify-content: space-between;
+">
+  <div style="margin-left:10rem; font-family: Nunito Sans,sans-serif; font-size:18px">Catalog > Assets > Test</div>
+  <div>
+    <button style="margin-right: 12rem; background-color: #56cc82;"  mat-raised-button >DELETE</button>
+  </div>
 </div>
-
-<div style="margin-top: 20px;margin-left:10rem; font-family: Nunito Sans,sans-serif;">Catalog > Assets > Test</div>
 
 <div class="v-top"></div>
 <div class="v-top"></div>
