--- a/icon/src/app/asset-list/asset-list.component.scss
+++ b/icon/src/app/asset-list/asset-list.component.scss
@@ -26,7 +26,7 @@ th {
 }
 
 .heading {
-    margin-top: 3em;
-    margin-left: 13em;
-    font-family: Nunito Sans;
+margin-left: 10em;
+    font-size: 18px;
+    font-family: Nunito Sans, sans-serif;
 }
