--- a/icon/src/app/navbar/navbar.component.scss
+++ b/icon/src/app/navbar/navbar.component.scss
@@ -68,14 +68,15 @@ mat-toolbar {
     height: 40px;
     box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%), 0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%);
     margin-right: 0.5em;
-    width: 15em;
+    width: 10em;
 
     .text {
-        color: rgb(0, 0, 0);
+    
         font-size: 1rem;
-        font-family: Nunito Sans, sans-serif;
-        font-weight: 400;
+        font-family: 'Nunito', sans-serif;
+            font-weight: 200;
         margin-left: -6px;
+        color: #424242;
     }
 
     .add {
