--- a/icon/src/app/asset-list/asset-list.component.html
+++ b/icon/src/app/asset-list/asset-list.component.html
@@ -18,7 +18,7 @@
     
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element" (click)="detailspage()"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element" style="color: green;cursor: pointer;"(click)="detailspage()"> {{element.name}} </td>
       </ng-container>
     
       <ng-container matColumnDef="weight">
