--- a/icon/src/app/asset-list/asset-list.component.html
+++ b/icon/src/app/asset-list/asset-list.component.html
@@ -2,7 +2,7 @@
     
 
 <div class="heading">
-    <p>Catalog > Products</p>
+    <p> CATALOG > PRODUCTS</p>
   </div>
   
   
@@ -12,27 +12,32 @@
   
       
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <th mat-header-cell *matHeaderCellDef> TITLE </th>
         <td mat-cell *matCellDef="let element"> {{element.position}} </td>
       </ng-container>
     
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> VERSION </th>
         <td mat-cell *matCellDef="let element" style="color: green;cursor: pointer;"(click)="detailspage()"> {{element.name}} </td>
       </ng-container>
     
       <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
+        <th mat-header-cell *matHeaderCellDef> ARTIST </th>
         <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
       </ng-container>
     
       <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
+        <th mat-header-cell *matHeaderCellDef> TYPE </th>
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      
+      
     </table>
+
+    <div class="norecord text mat-elevation-z8" *ngIf="dataSource.length === 0"><span style="margin-top: 10px;">No records found</span></div>
+
      
- 
