--- a/icon/src/app/asset-list/asset-list.component.scss
+++ b/icon/src/app/asset-list/asset-list.component.scss
@@ -12,6 +12,16 @@
     font-size: 2rem;
     color: lightgray;
 }
+.norecord {
+
+    width: 80%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    margin-left: 11.4rem;
+
+    background-color: white;
+}
 table {
     width: 80%;
     margin-left: 13em;
@@ -19,14 +29,22 @@ table {
     background-color: white;
 }
 
-td,
+
 th {
     border-bottom-color: #e2e2e2;
-    color: black
+    color: black;
+        font-size: 24px;
+        font-family: 'Bebas Neue', cursive;
+    }
+    
+    td {
+        color: black;
+        font-size: 12px;
+        font: normal normal 600 18px Proxima Soft;
 }
 
 .heading {
-margin-left: 10em;
-    font-size: 18px;
-    font-family: Nunito Sans, sans-serif;
+margin-left: 7.5em;
+    font-size: 24px;
+    font-family: 'Bebas Neue', cursive;
 }
