--- a/icon/src/app/navbar/navbar.component.scss
+++ b/icon/src/app/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
 mat-toolbar {
-    background-color: #56cc82;
+    background-color: #000000;
     height: 75px;
 
 }
@@ -8,7 +8,7 @@ mat-toolbar {
     width: 3.5em;
     margin-left: 1.8em;
     margin-top: 9.5px;
-    background-color: #56cc82;
+    background-color: #000000;
 }
 
 .catalog {
@@ -33,8 +33,8 @@ mat-toolbar {
 
 ::ng-deep .text {
     color: rgb(0, 0, 0);
-    font-size: 1rem;
-    font-family: Nunito Sans, sans-serif;
+    font-size: 24px;
+        font-family: 'Bebas Neue', cursive;
     font-weight: 400
 }
 
@@ -67,20 +67,20 @@ mat-toolbar {
     border-radius: 3em;
     height: 40px;
     box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%), 0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%);
-    margin-right: 0.5em;
-    width: 10em;
+    margin-right: 1.5em;
+        width: 5em;
 
-    .text {
+    // .text {
     
-        font-size: 1rem;
-        font-family: 'Nunito', sans-serif;
-            font-weight: 200;
-        margin-left: -6px;
-        color: #424242;
-    }
+    //     font-size: 1rem;
+        //     font-family: 'Nunito', sans-serif;
+        //         font-weight: 200;
+        //     margin-left: -6px;
+        //     color: #424242;
+        // }
 
     .add {
-        color: #56CC82;
+        color: #000000;
         margin-bottom: 3px;
         margin-left: -12px;
 
@@ -146,6 +146,7 @@ input[type=text]:focus {
     height: 24px;
     line-height: 14px;
     font-size: 14px;
+    margin-right: 0.5rem;
 
 
     &::ng-deep .mat-button-wrapper {
@@ -153,9 +154,10 @@ input[type=text]:focus {
         padding: 0;
 
         .span {
-            color: #56cc82;
+            color: #020202;
             font-weight: 900;
             font-size: 10px;
+            
         }
 
 
