--- a/icon/src/app/navbar/upload-asset/upload-asset.component.html
+++ b/icon/src/app/navbar/upload-asset/upload-asset.component.html
@@ -1,8 +1,8 @@
  <div  style="display: flex; padding: 20px;"  >
-    <h6 >Create Assets</h6> 
+    <h6  >Create Assets</h6> 
     <span class="example-spacer"></span> 
-      <button  mat-button type="button"  class="btn btn-primary">
-          <mat-icon class="icon">add</mat-icon><span>ADD FILES</span>
+      <button  mat-button type="button"  class="btn btn-primary ">
+          <mat-icon class="icon">add</mat-icon><span class="p">ADD FILES</span>
          </button>
     </div>
    <div >
@@ -10,11 +10,11 @@
           <table>
             <thead>
               <tr>
-                <th style="width:150px; max-width:150px; font-size: 11px; color: #6f6f6f; font-weight: 500;">TITLE</th>
-                <th style="width:120px; max-width:120px; font-size: 11px; color: #6f6f6f; font-weight: 500;">TRACK VERSION</th>
-                <th style="width:120px; max-width:120px; font-size: 11px; color: #6f6f6f; font-weight: 500;">TYPE</th>
-                <th style="width:120px; max-width:120px; font-size: 11px; color: #6f6f6f; font-weight: 500;">FILE</th>
-                <th style="width:50px; max-width:50px; font-size: 11px; color: #6f6f6f; font-weight: 500;"></th>
+                <th style="width:150px; max-width:150px;  color: #6f6f6f; ">TITLE</th>
+                <th style="width:120px; max-width:120px;  color: #6f6f6f; ">TRACK VERSION</th>
+                <th style="width:120px; max-width:120px;  color: #6f6f6f; ">TYPE</th>
+                <th style="width:120px; max-width:120px;  color: #6f6f6f; ">FILE</th>
+                <th style="width:50px; max-width:50px;  color: #6f6f6f; "></th>
               </tr>
             </thead>
             <tbody formArrayName="Rows">
@@ -24,26 +24,31 @@
               >
                 <td>
                     <mat-form-field class="example-full-width" appearance="legacy">
-                        
-                        <input matInput formControlName="name" placeholder="Title" class="form-control" required />
+                      <mat-label class="label">Title</mat-label>
+                        <input matInput class="white"   formControlName="name" placeholder="Title" class="form-control" required />
                     </mat-form-field>
                 </td>
         
                 <td>
                   <mat-form-field appearance="legacy">
-                    <input matInput formControlName="track"  placeholder="Enter Version" class="form-control" />
+                    <mat-label class="label">Track Version</mat-label>
+                    <input matInput class="white"  formControlName="track"  placeholder="Enter Version" class="form-control" />
                   </mat-form-field>
                 </td>
                 <td>
                   <mat-form-field appearance="legacy">
-                    <mat-label>Select an option</mat-label>
-                    <mat-select>
+                    <mat-label  class="label">Select an option</mat-label>
+                    <mat-select class="white">
                       <mat-option>None</mat-option>
-                      <mat-option value="option1">Option 1</mat-option>
-                      <mat-option value="option2">Option 2</mat-option>
-                      <mat-option value="option3">Option 3</mat-option>
+                      <mat-option value="option1">Track </mat-option>
+                      <mat-option value="option2">Classical Track</mat-option>
+                      <mat-option value="option3">Music Video</mat-option>
+                      <mat-option value="option4">Ringtone</mat-option>
+
                     </mat-select>
                   </mat-form-field>
+
+                 
                 </td>
                 <td>
                   <div>
@@ -51,7 +56,8 @@
     
                       <img  src="../../../assets/images/upload.svg  " />
                     </div>
-                    <p style="margin-top: -2em; margin-left: 2em ">FILE UPLOAD</p>
+                    <p style="margin-top: -1.5em; margin-left: 3em ;font-size: 16px; color: #000000;         font-family: 'NTR', sans-serif;
+                    ">FILE UPLOAD</p>
                   </div>
                 </td>
         
@@ -72,7 +78,7 @@
           </table>
         </form>
         <button mat-button type="button" (click)="addNewRow()" class="btn btn-primary">
-         <mat-icon class="icon">add</mat-icon><span>Add new Row</span>
+         <mat-icon class="icon">add</mat-icon><span class="p">Add new Row</span>
         </button>
         <br />
         <br />
@@ -80,7 +86,7 @@
     
     <div class="newone">
       <button class="color" mat-button>CANCEL</button>
-      <button class="color submit"  mat-flat-button (click)="onSubmit()" >CREATE</button>
+      <button class="color submit"  mat-flat-button (click)="onSubmit()" >CREATE ASSET</button>
     
     </div> 
      
