--- a/icon/src/app/navbar/upload-asset/upload-asset.component.scss
+++ b/icon/src/app/navbar/upload-asset/upload-asset.component.scss
@@ -2,17 +2,22 @@
     background-color: rgb(253, 253, 253);
 }
 
-::ng-deep .mat-form-field-underline {
-    background-color: #56cc82 !important;
-    ;
+::ng-deep .mat-form-field-underline::before,
+::ng-deep .mat-form-field-ripple {
+    background-color: black !important;
+}
+
+::ng-deep .mat-form-field-underline,
+::ng-deep .mat-form-field-ripple {
+    background-color: black !important;
 }
 
 .icon {
-    color: #56cc82;
+    color: #000000;
 }
 
 img {
-    color: #56cc82;
+margin-left: 20px;
 
 }
 
@@ -20,11 +25,15 @@ img {
     flex: 1 1 auto;
 }
 
+.p {
+    font-size: 24px;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 400
+}
 h6 {
-    font-size: 1.25rem;
-    font-family: Nunito Sans, sans-serif;
-    font-weight: 500;
-    line-height: 1.6;
+font-size: 24px;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 400
 }
 
 .newone {
@@ -37,6 +46,12 @@ h6 {
     margin-top: 10px;
 }
 
+.color {
+    color: black;
+    font-size: 24px;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 400
+}
 mat-dialog-container {
     background: white;
 }
@@ -56,9 +71,38 @@ table {
 
 table thead th {
     border-bottom: 1px solid #000;
+    font-size: 18px;
+        font-family: 'Bebas Neue', cursive;
+        font-weight: 200
+    }
+    
+    .label {
+        color: #808080;
+        font-family: 'NTR', sans-serif;
+        font-size: 20px;
+    }
+    
+    .white {
+        color: black;
+        font-family: Proxima Soft;
 }
+
 
 
 ::ng-deep .mat-form-field-label {
     color: #000 !important;
+}
+::ng-deep .mat-select-value {
+    color: #000 !important;
+}
+
+th .text {
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 400
+}
+
+.submit {
+    background-color: white;
 }
