added delete button

--- a/icon/src/app/asset-detail/asset-detail.component.html
+++ b/icon/src/app/asset-detail/asset-detail.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar ></app-navbar>
 
 
 
@@ -7,7 +7,7 @@
   <div class="mainheading">Catalog > Assets > Test</div>
   <div>
     <button style="margin-right: 12rem; background-color: #000000; font-size: 24px;
-    font-family: 'Bebas Neue', cursive;"  mat-raised-button >DELETE</button>
+    font-family: 'Bebas Neue', cursive;"  mat-raised-button (click)="dialog_delete()">DELETE</button>
   </div>
 </div>
 
