--- a/icon/src/app/asset-list/asset-list.component.html
+++ b/icon/src/app/asset-list/asset-list.component.html
@@ -11,25 +11,32 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
       
-      <ng-container matColumnDef="position">
+      <!-- <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef> TITLE </th>
         <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container>
+      </ng-container> -->
     
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> VERSION </th>
         <td mat-cell *matCellDef="let element" style="color: green;cursor: pointer;"(click)="detailspage()"> {{element.name}} </td>
       </ng-container>
     
-      <ng-container matColumnDef="weight">
+      <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> ARTIST </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.type}} </td>
       </ng-container>
     
-      <ng-container matColumnDef="symbol">
+      <ng-container matColumnDef="track">
         <th mat-header-cell *matHeaderCellDef> TYPE </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.track}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="ISRC">
+        <th mat-header-cell *matHeaderCellDef> ISRC </th>
+        <td mat-cell *matCellDef="let element"> {{element.ISRC}} </td>
+      </ng-container>
+
+     
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
