added single row data

--- a/icon/src/app/asset-list/asset-list.component.html
+++ b/icon/src/app/asset-list/asset-list.component.html
@@ -45,6 +45,6 @@
       
     </table>
 
-    <div class="norecord text mat-elevation-z8" *ngIf="dataSource.length === 0"><span style="margin-top: 10px;">No records found</span></div>
+    <!-- <div class="norecord text mat-elevation-z8" *ngIf="dataSource.length === 0"><span style="margin-top: 10px;">No records found</span></div> -->
 
      
