removed secure in login payload

--- a/icon/src/app/login/login.component.html
+++ b/icon/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 
 			<mat-card >
                 <div class="img">
-                    <img src="../../assets/images/image.svg">
+                    <img src="../../assets/images/ICON1.svg">
 
                 </div>
 			
