--- a/icon/src/app/navbar/navbar.component.html
+++ b/icon/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
     <div>
-        <img (click)="navToHomePage()" class="logo" src="../../assets/images/image.svg" />
+        <img (click)="navToHomePage()" class="logo" src="../../assets/images/ICON1.svg" />
       </div>
     
      
